welcome.lessons.welcome.array.array667.Array667.scala.error
array667:2: error: not found: value nbDe6
  nbDe6=0
  ^array667:3: error: not found: value nbDe7
  nbDe7=0
  ^array667:6: error: not found: value nbDe6
      nbDe6=nbDe6+1
      ^array667:9: error: not found: value nbDe7
        nbDe7=nbDe7+1
        ^array667:12: error: not found: value nbDe6
    return nbDe6
           ^array667:13: error: not found: value nbDe7
    return nbDe7
           ^array667:4: error: type mismatch;
 found   : Unit
 required: Int
  for (i<-0 to nums.length-1) {
        ^